--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "next": "14.0.0",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18"
+    "react-contenteditable": "^3.3.7",
+    "react-dom": "^18",
+    "sanitize-html": "^2.11.0"
   }
 }
